using EmailApp.Entities;
using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace EmailApp.Services
{
    public interface IProfileService
    {
        public void Create(User user);
        public User GetCurrent();
    }
}
